Fix to z-indexing and ensuring sparkDiv never prints.

--- a/styleSheets/printStyle.css
+++ b/styleSheets/printStyle.css
@@ -192,4 +192,8 @@
 
 	/* End content formatting selectors */
 
+	.sparkDiv {
+		display: none;
+	}
+
 }
